--- a/Exam/Base.lproj/Main.storyboard
+++ b/Exam/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cL5-eC-egy">
                                         <rect key="frame" x="0.0" y="0.0" width="170" height="30"/>
-                                        <state key="normal" title="Сгенерировать вопрос"/>
+                                        <state key="normal" title="Обновить вопрос"/>
                                         <connections>
                                             <action selector="gererateQuestionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dzB-op-ulA"/>
                                         </connections>
@@ -83,10 +83,64 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Категория" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EcY-1X-RGW">
-                                <rect key="frame" x="20" y="44" width="350" height="34"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M4x-ZU-Vzn">
+                                <rect key="frame" x="16" y="780" width="46" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="350" id="Mjl-cq-sxq"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="E7t-CS-p3b"/>
+                                    <constraint firstAttribute="height" constant="30" id="yrm-Ca-CGJ"/>
+                                </constraints>
+                                <state key="normal" title="&lt;"/>
+                                <connections>
+                                    <action selector="buttonLess:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qGQ-iI-iQq"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5bo-V8-tgi">
+                                <rect key="frame" x="324" y="779" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="HoU-Gi-TVJ"/>
+                                    <constraint firstAttribute="height" constant="30" id="LmL-O5-IzQ"/>
+                                </constraints>
+                                <state key="normal" title="&gt;"/>
+                                <connections>
+                                    <action selector="buttonMore:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uBp-Ep-dPU"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfc-fG-Olm">
+                                <rect key="frame" x="0.0" y="51" width="60" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="LgS-fJ-G8G"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RkT-aG-zeH">
+                                <rect key="frame" x="250" y="780" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="PM7-E8-LGx"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="fzg-yd-ygG"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="udt-nC-sWm"/>
+                                </constraints>
+                                <state key="normal" title="&gt;&gt;"/>
+                                <connections>
+                                    <action selector="button10More:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Sbs-c4-P3P"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SCn-GW-TLI">
+                                <rect key="frame" x="185" y="780" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="XM7-7R-QtY"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="YcW-HY-9UF"/>
+                                </constraints>
+                                <state key="normal" title="&gt;&gt;&gt;"/>
+                                <connections>
+                                    <action selector="button100More:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c0L-xG-MhG"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Категория" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EcY-1X-RGW">
+                                <rect key="frame" x="70" y="44" width="315" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="315" id="Mjl-cq-sxq"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -98,33 +152,48 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="RkT-aG-zeH" firstAttribute="leading" secondItem="SCn-GW-TLI" secondAttribute="trailing" constant="19" id="0tV-lt-UaR"/>
                             <constraint firstItem="56b-fq-MMi" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="31" id="1kD-6l-eK6"/>
+                            <constraint firstItem="5bo-V8-tgi" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="M4x-ZU-Vzn" secondAttribute="trailing" constant="8" symbolic="YES" id="4b8-8V-tf6"/>
+                            <constraint firstItem="RkT-aG-zeH" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="6G6-6a-fiQ"/>
                             <constraint firstItem="njS-Xi-x8F" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="58.670000000000002" id="8R8-E8-2mA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="V4k-dZ-YZ4" secondAttribute="trailing" constant="20" id="Bdc-BN-Eb2"/>
                             <constraint firstItem="SdC-EI-kWV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="EUu-Ur-43A"/>
+                            <constraint firstItem="SCn-GW-TLI" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="EvP-M7-uGu"/>
                             <constraint firstItem="EcY-1X-RGW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="HLe-Fz-fBc"/>
+                            <constraint firstItem="mfc-fG-Olm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="HOa-3v-mX1"/>
                             <constraint firstItem="fdG-QM-r5X" firstAttribute="top" secondItem="njS-Xi-x8F" secondAttribute="bottom" constant="20" id="HpK-Cs-3Nq"/>
                             <constraint firstItem="FFb-jr-3gb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="J7A-A6-ry2"/>
                             <constraint firstItem="njS-Xi-x8F" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="K1K-PI-L0Q"/>
                             <constraint firstItem="V4k-dZ-YZ4" firstAttribute="top" secondItem="FFb-jr-3gb" secondAttribute="bottom" constant="35" id="Mg2-f7-2Jc"/>
                             <constraint firstItem="fdG-QM-r5X" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="99" id="MzW-5O-n09"/>
-                            <constraint firstItem="EcY-1X-RGW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="STy-WJ-fMD"/>
+                            <constraint firstItem="SCn-GW-TLI" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="M4x-ZU-Vzn" secondAttribute="trailing" symbolic="YES" id="PLT-6i-tGu"/>
+                            <constraint firstItem="EcY-1X-RGW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="STy-WJ-fMD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FFb-jr-3gb" secondAttribute="trailing" constant="20" id="SWW-Mv-RUo"/>
                             <constraint firstItem="FFb-jr-3gb" firstAttribute="top" secondItem="fdG-QM-r5X" secondAttribute="bottom" constant="29" id="U8W-iI-Srk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5bo-V8-tgi" secondAttribute="trailing" constant="20" id="UDb-eA-TdP"/>
+                            <constraint firstItem="M4x-ZU-Vzn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="UH6-W2-ug0"/>
                             <constraint firstItem="wYd-Xa-25Z" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Y5k-IG-fLR"/>
                             <constraint firstItem="Vbf-8K-Hty" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="YZl-qB-C2d"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wYd-Xa-25Z" secondAttribute="trailing" constant="20" id="aIS-cb-F96"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5bo-V8-tgi" secondAttribute="bottom" constant="1" id="aOA-G5-igX"/>
                             <constraint firstItem="Vbf-8K-Hty" firstAttribute="top" secondItem="wYd-Xa-25Z" secondAttribute="bottom" constant="44" id="aXC-aV-b0j"/>
                             <constraint firstItem="56b-fq-MMi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="bdP-tb-y1q"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Vbf-8K-Hty" secondAttribute="trailing" constant="20" id="c9K-Vy-qVB"/>
+                            <constraint firstItem="EcY-1X-RGW" firstAttribute="leading" secondItem="mfc-fG-Olm" secondAttribute="trailing" constant="10" id="d6H-bg-vfI"/>
                             <constraint firstItem="wYd-Xa-25Z" firstAttribute="top" secondItem="SdC-EI-kWV" secondAttribute="bottom" constant="35.000000000000057" id="dt0-C3-QoQ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fdG-QM-r5X" secondAttribute="trailing" constant="20" id="ekL-eU-LPf"/>
                             <constraint firstItem="V4k-dZ-YZ4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="esA-6X-mBU"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SdC-EI-kWV" secondAttribute="trailing" constant="20" id="gWe-xr-c0l"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="56b-fq-MMi" secondAttribute="trailing" constant="20" id="gxz-1j-ko9"/>
+                            <constraint firstItem="5bo-V8-tgi" firstAttribute="leading" secondItem="RkT-aG-zeH" secondAttribute="trailing" constant="28" id="lIT-pW-5nR"/>
+                            <constraint firstItem="EcY-1X-RGW" firstAttribute="top" secondItem="mfc-fG-Olm" secondAttribute="bottom" constant="-28" id="mYv-XQ-bRD"/>
+                            <constraint firstItem="RkT-aG-zeH" firstAttribute="leading" secondItem="M4x-ZU-Vzn" secondAttribute="trailing" constant="188" id="nJN-fd-0q1"/>
                             <constraint firstItem="fdG-QM-r5X" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="qYs-v6-p9c"/>
                             <constraint firstItem="SdC-EI-kWV" firstAttribute="top" secondItem="V4k-dZ-YZ4" secondAttribute="bottom" constant="44" id="rkd-Ba-o6K"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="njS-Xi-x8F" secondAttribute="trailing" constant="20" id="tqR-hm-NwH"/>
+                            <constraint firstItem="mfc-fG-Olm" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="51" id="vnS-ug-jty"/>
+                            <constraint firstItem="M4x-ZU-Vzn" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="xpz-ZZ-HCx"/>
                         </constraints>
                     </view>
                     <connections>
@@ -135,6 +204,7 @@
                         <outlet property="answerLabel5" destination="Vbf-8K-Hty" id="bej-AS-HqM"/>
                         <outlet property="catLabel" destination="njS-Xi-x8F" id="9f3-rM-Ecd"/>
                         <outlet property="currentQuestionText" destination="EcY-1X-RGW" id="FDT-Z3-AIW"/>
+                        <outlet property="iterator" destination="mfc-fG-Olm" id="gd0-LH-pKd"/>
                         <outlet property="questionLabel" destination="fdG-QM-r5X" id="5Zy-Q1-f1g"/>
                     </connections>
                 </viewController>
